# SCALPEL-scan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: registry.yaml
data/benign/: benign_baseline.jsonl
data/control_pairs/: code.json  language.json  math.json
data/safety/: advbench.jsonl  advbench_100.jsonl  harmbench.jsonl  harmbench10.jsonl  harmbench20.jsonl
data/templates/: sample.jsonl
scalpel/: __init__.py  __main__.py  adaptive_alpha.py  cli.py  data.py  eval.py  eval_harmbench_cls.py  judge.py  models.py  overlap.py  plan.py  plot.py  scan.py  stats.py
